# WasteLand

./: .gitignore  Cargo.toml  Dockerfile  README.md
benches/: image_list  main.rs  my_benchmark.rs  picture_cache.rs  simple_database.rs
benchmark/: Cargo.toml
benchmark/benches/: main.rs
benchmark/src/: bencher.rs  lib.rs
benchmark/src/picture_cache/: downloader.sh  mod.rs  picture_cache.rs
src/: btree.rs  error.rs  hash.rs  indexer.rs  lib.rs  offset.rs  utils.rs
src/btree/: btree.rs  page.rs  pager.rs
src/btree/node/: basic_node.rs  head_node.rs  leaf_node.rs  mod.rs
tools/: index-show.py
waste_island/: Cargo.toml
waste_island/benches/: downloader.sh  main.rs
waste_island/src/: database.rs  error.rs  hash.rs  indexer.rs  lib.rs  offset.rs  utils.rs
waste_island/src/btree/: btree.rs  mod.rs  page.rs  pager.rs
waste_island/src/btree/node/: head_node.rs  internal_node.rs  mod.rs
waste_island/src/testutils/: picture_cache.rs
waste_web/: Cargo.toml
waste_web/frontend_ui/: package.json  pnpm-lock.yaml  tailwind.config.js
waste_web/frontend_ui/src/: main.tsx
waste_web/frontend_ui/src/components/: App.tsx  Button.tsx  NewWaste.tsx  WasteList.tsx
waste_web/frontend_ui/src/hooks/: useBaseUrl.ts  useCreateWaste.ts  useGetWaste.ts  useListWastes.ts
waste_web/frontend_ui/src/utils/: Waste.tsx  WasteId.tsx
waste_web/src/: error.rs  main.rs  server.rs
