[package]
name = "waste_web"
version = "0.1.0"
edition = "2021"

[dependencies]
waste_island = { path = "../waste_island" }

http-body-util = "0.1.0-rc.2" 
tokio = { version = "1.28.1", features = ["full"] }
axum = { version = "0.6.18", features = ["headers"] }
hyper = "0.14.26"
tower-http = { version = "0.4.0", features = ["fs"] }
